# ree-open

./: README.md  local.properties  settings.gradle.kts
.github/workflows/: compile.yml  main.yml  min.yml
app/: ImageLoader.h  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  GuiUtils.cpp  GuiUtils.h
app/src/main/cpp/: BackgroundAnim.h  CMakeLists.txt  GuiUtils.h  MenuConfig.h  Utils.h  hook.h  main.cpp  main.h  qword.h  setting.h
app/src/main/cpp/func/: bools.cpp  bools.h
app/src/main/cpp/wLibs/: Utils.h  gl3stub.c  gl3stub.h  iconvlite.h  jni.h  math.h  memory.cpp  memory.h  stb_image.h
app/src/main/cpp/wLibs/Dobby/: dobby.h
app/src/main/cpp/wLibs/ImGui/: imgui_draw.cpp
app/src/main/cpp/wLibs/ImGui/ImGui/: imgui_demo.cpp  imgui_widgets.cpp
app/src/main/cpp/wLibs/curl/: libcurl.a.url
app/src/main/cpp/wLibs/res/: alpha_icon_image.h  font.h  icon_font.h  icon_image.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
